[gd_scene load_steps=10 format=3 uid="uid://b43k1ehajpo18"]

[ext_resource type="Script" path="res://Game (source)/Main.gd" id="1_68jb2"]
[ext_resource type="Script" path="res://Game (source)/Deck.gd" id="2_gvjfh"]
[ext_resource type="Texture2D" uid="uid://6crh8fcs6j5c" path="res://Assets/Sprites/Cards/cardBack.png" id="3_e2vpn"]
[ext_resource type="Texture2D" uid="uid://cny6p6tqf6jq" path="res://Assets/Sprites/Cards/cardOutline.png" id="4_2v00g"]
[ext_resource type="Script" path="res://Game (source)/Dealer.gd" id="5_di75l"]
[ext_resource type="Texture2D" uid="uid://dt8o0ow0wl0ss" path="res://Assets/Sprites/buttonBase.png" id="5_vnjsd"]
[ext_resource type="Texture2D" uid="uid://dsi22hy6e2o05" path="res://Assets/Sprites/greenButton.png" id="6_t2c8y"]
[ext_resource type="Texture2D" uid="uid://d3pd6if2nn0b3" path="res://Assets/Sprites/redButton.png" id="7_ro6p4"]

[sub_resource type="GDScript" id="GDScript_mf22i"]

[node name="Main" type="Node"]
script = ExtResource("1_68jb2")

[node name="Deck" type="Node" parent="."]
script = ExtResource("2_gvjfh")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)

[node name="PlayerHand" type="Node2D" parent="."]
position = Vector2(0, 120)

[node name="Card1" type="Sprite2D" parent="PlayerHand"]
position = Vector2(-40, 0)
texture = ExtResource("3_e2vpn")

[node name="Card2" type="Sprite2D" parent="PlayerHand"]
position = Vector2(40, 0)
texture = ExtResource("3_e2vpn")

[node name="CardOutlines" type="Sprite2D" parent="PlayerHand"]
position = Vector2(-40, 0)
texture = ExtResource("4_2v00g")

[node name="CardOutline" type="Sprite2D" parent="PlayerHand/CardOutlines"]
position = Vector2(80, 0)
texture = ExtResource("4_2v00g")

[node name="Dealer" type="Node2D" parent="."]
script = ExtResource("5_di75l")

[node name="Card1" type="Sprite2D" parent="Dealer"]
position = Vector2(-144, 0)
texture = ExtResource("3_e2vpn")
script = SubResource("GDScript_mf22i")

[node name="Card2" type="Sprite2D" parent="Dealer"]
position = Vector2(-72, 0)
texture = ExtResource("3_e2vpn")

[node name="Card3" type="Sprite2D" parent="Dealer"]
texture = ExtResource("3_e2vpn")

[node name="Card4" type="Sprite2D" parent="Dealer"]
position = Vector2(72, 0)
texture = ExtResource("3_e2vpn")

[node name="Card5" type="Sprite2D" parent="Dealer"]
position = Vector2(144, 0)
texture = ExtResource("3_e2vpn")

[node name="CardOutlines" type="Sprite2D" parent="Dealer"]
texture = ExtResource("4_2v00g")

[node name="CardOutline" type="Sprite2D" parent="Dealer/CardOutlines"]
position = Vector2(-72, 0)
texture = ExtResource("4_2v00g")

[node name="CardOutline" type="Sprite2D" parent="Dealer/CardOutlines/CardOutline"]
position = Vector2(-72, 0)
texture = ExtResource("4_2v00g")

[node name="CardOutline" type="Sprite2D" parent="Dealer/CardOutlines/CardOutline/CardOutline"]
position = Vector2(216, 0)
texture = ExtResource("4_2v00g")

[node name="CardOutline" type="Sprite2D" parent="Dealer/CardOutlines/CardOutline/CardOutline/CardOutline"]
position = Vector2(72, 0)
texture = ExtResource("4_2v00g")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -344.0
offset_top = -192.0
offset_right = 344.0
offset_bottom = 192.0

[node name="ButtonPanel" type="Control" parent="UI"]
layout_mode = 1
anchor_right = 0.012
anchor_bottom = 0.021
offset_left = 344.0
offset_top = 192.0
offset_right = 375.744
offset_bottom = 223.936
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonBase" type="Sprite2D" parent="UI/ButtonPanel"]
position = Vector2(-240, 120)
texture = ExtResource("5_vnjsd")

[node name="ConfirmButton" type="Button" parent="UI/ButtonPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = -288.0
offset_top = 88.0
offset_right = -256.0
offset_bottom = 112.0
icon = ExtResource("6_t2c8y")

[node name="DenyButton" type="Button" parent="UI/ButtonPanel"]
layout_mode = 0
offset_left = -232.0
offset_top = 88.0
offset_right = -190.0
offset_bottom = 132.0
icon = ExtResource("7_ro6p4")
